CMake: Add "lint" function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(may_robot
         DESCRIPTION "Robot For Maayan"
         LANGUAGES CXX)
 
-set(CMAKE_CXX_CLANG_TIDY clang-tidy -checks=-*,readability-*,-isystem)
+include(cmake/env.cmake)
 
 add_subdirectory(src)
