Change project name to "mrobot"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10.0)
-project(may_robot
+project(mrobot
         VERSION 0.1.0
         DESCRIPTION "Robot For Maayan"
         LANGUAGES CXX)
