Implement simple configuration management

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,10 @@ set(TARGET_VERSION ${PROJECT_VERSION})
 set(SOURCES
     main.cc
     gpio.cc
+    conf.cc
    )
 
 add_executable(${TARGET_NAME} ${SOURCES})
 target_compile_definitions(${TARGET_NAME} PRIVATE VERSION="${TARGET_VERSION}")
+
+install(TARGETS ${TARGET_NAME} DESTINATION /usr/bin/)
