--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,9 +6,15 @@ set(SOURCES
     gpio.cc
     conf.cc
     led.cc
+    lights_controller.cc
+   )
+
+set(LIBS
+    pthread
    )
 
 add_executable(${TARGET_NAME} ${SOURCES})
 target_compile_definitions(${TARGET_NAME} PRIVATE VERSION="${TARGET_VERSION}")
+target_link_libraries(${TARGET_NAME} ${LIBS})
 
 install(TARGETS ${TARGET_NAME} DESTINATION /usr/bin/)
