--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,7 +10,12 @@ set(SOURCES
     mqtt_client.cc
    )
 
+set(LIBS
+    mosquitto
+   )
+
 add_executable(${TARGET_NAME} ${SOURCES})
 target_compile_definitions(${TARGET_NAME} PRIVATE VERSION="${TARGET_VERSION}")
+target_link_libraries(${TARGET_NAME} ${LIBS})
 
 install(TARGETS ${TARGET_NAME} DESTINATION /usr/bin/)
