MqTT networking test: Add messages router

--- a/tests/networking/CMakeLists.txt
+++ b/tests/networking/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_unittest(TEST mqtt
-             MAIN mqtt.cc
-             SOURCES mqtt_client.cc
+             MAIN mqtt.cc 
+             SOURCES mqtt_client.cc message.cc
              LIBS pthread mosquitto)
