--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,3 +5,7 @@ endif()
 if (NETWORKING_TESTS)
     add_subdirectory(networking)
 endif()
+
+if (SIMULATION)
+    add_subdirectory(simulation)
+endif()
