Test resources: Change dummy configuration

--- a/tests/resources/dummy.conf
+++ b/tests/resources/dummy.conf
@@ -4,6 +4,6 @@ eye_left=2
 antena_right=3
 antena_left=4
 
-mqtt_client_name=kaka
-mqtt_broker_url=10.com
-mqtt_broker_port=555
+mqtt_client_name=test_client
+mqtt_broker_url=localhost
+mqtt_broker_port=1883
