Bluetooth tests: Add simple peers scan standalone test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,13 @@ project(mrobot
 option(LINT "Lint code" ON)
 option(UNITTESTS "Build unittests" OFF)
 option(NETWORKING_TESTS "Build networking tests" OFF)
+option(BLUETOOTH_TESTS "Build networking tests" OFF)
 option(SIMULATION "Build simulation" OFF)
 
 include(cmake/env.cmake)
 
 set(TESTING FALSE)
-if(UNITTESTS OR NETWORKING_TESTS OR SIMULATION)
+if(UNITTESTS OR NETWORKING_TESTS OR SIMULATION OR BLUETOOTH_TESTS)
     set(TESTING TRUE)
 endif()
 
