--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,6 +6,10 @@ if (NETWORKING_TESTS)
     add_subdirectory(networking)
 endif()
 
+if (BLUETOOTH_TESTS)
+    add_subdirectory(bluetooth)
+endif()
+
 if (SIMULATION)
     add_subdirectory(simulation)
 endif()
