--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ compiler:
   - gcc
 before_install:
   - sudo apt-get update
-  - sudo apt-get install -y libmosquitto-dev
+  - sudo apt-get install -y libmosquitto-dev libbluetooth-dev
 script:
   - echo "Building project"
   - mkdir build && cd build
